--- a/Spark/1-RDD-doc.ipynb
+++ b/Spark/1-RDD-doc.ipynb
@@ -292,19 +292,21 @@
    "metadata": {},
    "source": [
     "3. `aggregateByKey(init_value)(func1,func2)`  \n",
-    " 1. 讲key值相同的item, 先在分区内进行local aggregate, 再在分区间进行跨分区的aggregate  \n",
-    " 2. reduceByKey(+)调用的都是同一个方法，只是aggregateByKey要底层一些，可以先局部再整体操作。"
+    " 1. 将key值相同的item, 先在分区内进行local aggregate, 再在分区间进行跨分区的aggregate  \n",
+    " 2. reduceByKey(+)调用的都是同一个方法，只是aggregateByKey要底层一些，可以先局部再整体操作。\n",
+    " 3. `grupByKey`: 按照key分组, 返回(k,Sequence(v)), groupbykey相比reducebykey少了分组后进行聚合操作的函数制定, 因此,groupByKey后, 使用map指定聚合函数对序列操作\n",
+    " "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "pairRDD = ParallelCollectionRDD[36] at parallelize at <console>:29\n"
+       "pairRDD = ParallelCollectionRDD[0] at parallelize at <console>:27\n"
       ]
      },
      "metadata": {},
@@ -316,7 +318,7 @@
        "[(dog,12), (cat,17), (mouse,6)]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,10 +332,270 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(dog,CompactBuffer(12))\n",
+      "(cat,CompactBuffer(2, 5, 12))\n",
+      "(mouse,CompactBuffer(4, 2))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "rdd1 = ShuffledRDD[5] at groupByKey at <console>:31\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ShuffledRDD[5] at groupByKey at <console>:31"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val rdd1 = pairRDD.groupByKey\n",
+    "rdd1.collect.foreach(println)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. `countByKey`  \n",
+    "根据key计算key的数量"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(a,1)\n",
+      "(b,2)\n",
+      "(c,2)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "rdd1 = ParallelCollectionRDD[15] at parallelize at <console>:29\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Map((c,2) -> 1, (a,1) -> 1, (b,2) -> 2, (c,1) -> 1)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val rdd1 = sc.parallelize(List((\"a\", 1), (\"b\", 2), (\"b\", 2), (\"c\", 2), (\"c\", 1)))\n",
+    "rdd1.countByKey.foreach(println)\n",
+    "rdd1.countByValue//将(\"a\", 1)当做一个元素，统计其出现的次数"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. `cogroup(otherDataset)`   \n",
+    " When called on datasets of type (K, V) and (K, W), returns a dataset of (K, (Iterable<V>, Iterable<W>)) tuples. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(B,(CompactBuffer(2),CompactBuffer()))\n",
+      "(D,(CompactBuffer(),CompactBuffer(d)))\n",
+      "(A,(CompactBuffer(1),CompactBuffer(a)))\n",
+      "(C,(CompactBuffer(3),CompactBuffer(c)))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "rdd1 = ParallelCollectionRDD[29] at makeRDD at <console>:31\n",
+       "rdd2 = ParallelCollectionRDD[30] at makeRDD at <console>:32\n",
+       "rdd3 = MapPartitionsRDD[32] at cogroup at <console>:33\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "MapPartitionsRDD[32] at cogroup at <console>:33"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "var rdd1 = sc.makeRDD(Array((\"A\",\"1\"),(\"B\",\"2\"),(\"C\",\"3\")),2)\n",
+    "var rdd2 = sc.makeRDD(Array((\"A\",\"a\"),(\"C\",\"c\"),(\"D\",\"d\")),2)\n",
+    "var rdd3 = rdd1.cogroup(rdd2)\n",
+    "rdd3.collect.foreach(println)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "6. `cartesian`  \n",
+    "笛卡尔积"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(a,1)\n",
+      "(a,2)\n",
+      "(b,1)\n",
+      "(c,1)\n",
+      "(b,2)\n",
+      "(c,2)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "rdd1 = ParallelCollectionRDD[39] at makeRDD at <console>:30\n",
+       "rdd2 = ParallelCollectionRDD[40] at makeRDD at <console>:31\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ParallelCollectionRDD[40] at makeRDD at <console>:31"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "var rdd1 = sc.makeRDD(Array(\"a\",\"b\",\"c\"),2)\n",
+    "var rdd2 = sc.makeRDD(Array(1,2),2)\n",
+    "rdd1.cartesian(rdd2).collect.foreach(println)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7. `coalesce`与`repartition`   \n",
+    "二者均是重新对数据分区.   \n",
+    "`repartition`会对所有数据重新shuffle  \n",
+    "`coalesce`用于合并分区, 减小分区数量, 用于果过滤大数据集后的搞笑操作"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 6. shuffle\n",
+    "1. shuffle是对数据进行're-distributing'操作的机制, 让数据通过分区分到不同的组\n",
+    "2. shuffle需要跨机器, 跨executors之间进行数据复制, 因此是一种开销极大的操作\n",
+    "3. 什么样的操作会引起shuffle:  \n",
+    "  1. `repartition` and `coalesce`\n",
+    "  2. `ByKey`操作, 除了`countByKey`, 例如`groupByKey` and `reduceByKey`  \n",
+    "  3. join操作: `cogroup` and `join`  \n",
+    "4. shuffle会引起大量网络IO, 而且当内存中无法存储下组织的数据, 还会引起磁盘IO来缓存数据"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 7. RDD Persistence\n",
+    "1. RDD的任何一个分区丢失, 都会从源头通过rtansformation操作, 重新计算RDD\n",
+    "2. `presist()`可指定持久化级别, 而`cache()`使用默认级别持久化:MEMORY_ONLY(将RDD序列化后存入内存)  \n",
+    "3. `MEMORY_ONLY_SER`级别: 可以自己指定持久化序列方式\n",
+    "4. 尽量不使用写磁盘的持久化级别, 除非数据计算十分复杂或需要持久化的数据量很大, 从源头重新计算RDD往往更快  \n",
+    "5. 可以使用带副本的持久化级别, 如`MEMORY_ONLY_2`, 这会将数据持久化到集群中的2个不同节点.  \n",
+    " spark所有持久化都是有容错机制的, 即分区丢失的话, 会重新计算该RDD分区的数据. 而使用带副本的持久化可以在1个分区副本丢失时继续执行任务, 而不必等带这个分区重新计算  \n",
+    "6. cache的数据将自动被spark清除出内存(使用LRU算法-least-recently-used). 可以手动使用RDD.unpersist()释放内存"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 8. Broadcast变量\n",
+    "1. Broadcast变量在远程executor机器上共享只读变量(Accumulator是可读可写变量)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "broadcastVar = Broadcast(6)\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val broadcastVar = sc.broadcast(Array(1, 2, 3))\n",
+    "broadcastVar.value"
+   ]
   }
  ],
  "metadata": {
