--- a/Spark/Spark Paper.ipynb
+++ b/Spark/Spark Paper.ipynb
@@ -92,7 +92,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 1.3 离散流\n",
+    "\n",
+    "1. 连续操作模型，系统通过两种途径来进行恢复:  \n",
+    " 1. 复制: 每个节点存在两个副本, 要占用2倍的硬件    \n",
+    " 2. 上行流备份(upstream backup): 节点缓存发送信息并在一个故障节点的新副本里重新执行。需要长时间的恢复，因为整个系统必须等待一个新的节点通过重新运行操作数据串行重建故障节点的状态。  \n",
+    " 3. 两种途径都不太适合大规模集群,慢任务需要当作系统故障来处理，而这样的恢复代价高昂；"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. 离散流  \n",
+    " 与管理长时间存在的操作不同，D-Streams结构将各运算流化成为一系列短时间间隔的无状态、确定性的批计算。"
+   ]
   },
   {
    "cell_type": "code",
