--- a/Scala/3-unapply与高阶函数.ipynb
+++ b/Scala/3-unapply与高阶函数.ipynb
@@ -179,8 +179,8 @@
    "metadata": {},
    "source": [
     "### 3.2 高阶函数\n",
-    "1. 函数是scala的一等公民, 因此可以讲函数作为变量.  \n",
-    "2. java中的函数概念不同于方法, 需要使用`function _`将方法转换为函数"
+    "#### 1. 函数是scala的一等公民, 因此可以将函数作为变量.  \n",
+    "#### 2. java中的函数概念不同于方法, 需要使用`function _`将方法转换为函数"
    ]
   },
   {
@@ -232,7 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. 可以传递匿名函数"
+    "#### 3. 可以传递匿名函数"
    ]
   },
   {
@@ -259,7 +259,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. 函数作为参数"
+    "#### 4. 函数作为参数"
    ]
   },
   {
@@ -297,7 +297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. 高阶函举例"
+    "#### 5. 高阶函举例"
    ]
   },
   {
@@ -345,21 +345,85 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. SAM"
+    "#### 6. SAM\n",
+    "1. SAM全称: 'single abstract method', 这是Java种的叫法.   \n",
+    " 因为java不能把函数作为参数传进另一个函数, 因此, Java想要实现这个功能, 就要把作为参数的函数抽象出一个接口来, 然后实例化这个接口的抽象方法产生对象作为参数传进去. 因为往往只实例化一次, 所以称为'单一抽象方法'.   \n",
+    "2. scala可以使用隐式转换将一个函数变成一个SAM对象. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "implicit def mkAction(action: (ActionEvent)=>Unit) = {\n",
+    "    new ActionListener{\n",
+    "        override def actionPerformed(event:ActionEvent){\n",
+    "            // TODO\n",
+    "        }\n",
+    "    }\n",
+    "}"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "7. 柯里化"
+    "#### 7. 柯里化\n",
+    "1. 柯里化是将2个参数的函数, 变成'接收1个参数, 返回一个函数'的函数  \n",
+    "2. 且第二个函数可以利用第一个函数的参数.   \n",
+    " 如下例, mal2是mal1的柯里化形式"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mmal1\u001b[39m\n",
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mmal\u001b[39m\n",
+       "\u001b[36mres4_2\u001b[39m: \u001b[32mInt\u001b[39m => \u001b[32mInt\u001b[39m = <function1>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def mal1(x:Int) = (y:Int)=>x*y\n",
+    "def mal(x:Int)(y:Int) = x*y\n",
+    "mal1(6)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "8. 控制抽象  \n",
+    "3. `Seqlike`类中的`corresponds`方法利用了柯里化: 比较两个集合在某个对比条件下是否相同\n",
+    "\n",
+    "```scala\n",
+    "  def corresponds[B](that: GenSeq[B])(p: (A,B) => Boolean): Boolean = {\n",
+    "    val i = this.iterator\n",
+    "    val j = that.iterator\n",
+    "    while (i.hasNext && j.hasNext)\n",
+    "      if (!p(i.next(), j.next()))\n",
+    "        return false\n",
+    "\n",
+    "    !i.hasNext && !j.hasNext\n",
+    "  }\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 8. 控制抽象  \n",
     "有时候, 想把一块代码片段作为函数的参数使用, 此时可以把代码块表示为'不带参数,且返回值为unit类型的匿名函数'作为参数\n"
    ]
   },
@@ -383,7 +447,7 @@
     "def runThread(block: =>Unit) = {\n",
     "    new Thread{\n",
     "        override def run(){\n",
-    "            block\n",
+    "            block // 执行代码片段\n",
     "        }\n",
     "    }.start()\n",
     "}\n",
@@ -395,18 +459,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "9. 使用柯里化和控制抽象, 实现条件转移代码块   \n",
+    "#### 9. 使用柯里化和控制抽象, 实现条件转移代码块   \n",
     "\n",
     "以下例子, "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36muntil\u001b[39m\n",
+       "\u001b[36mx\u001b[39m: \u001b[32mInt\u001b[39m = \u001b[32m0\u001b[39m"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def until"
+    "// condition: 无参数,返回Boolean的函数\n",
+    "// block: 无参数, 返回Unit的函数\n",
+    "def until(condition: =>Boolean)(block: =>Unit):Unit = {\n",
+    "    if(!condition){\n",
+    "        block\n",
+    "        until(condition)(block)\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "var x = 10\n",
+    "until(x==0){\n",
+    "    x = x-1\n",
+    "    println(x)\n",
+    "}"
    ]
   }
  ],
