spark window function

--- a/Spark/2-DataFrame,DataSet和Sql.ipynb
+++ b/Spark/2-DataFrame,DataSet和Sql.ipynb
@@ -417,7 +417,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3. pivot\n",
+    "### 2.4 Spark sql 举例\n",
+    "\n",
+    "#### 一. pivot\n",
     "1. 构造数据\n",
     "2. 透视的基本写法  \n",
     "```\n",
@@ -536,7 +538,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4. 时间窗口函数\n",
+    "#### 二. 多表join\n",
+    "1. 2个表, 展示表,点击表, 统计展示后的点击次数  \n",
     "df1为用户展示表, df2为用户点击表. 统计每次展示给用户3天内, 用户的点击次数"
    ]
   },
@@ -680,7 +683,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 5. 时间窗口函数\n",
+    "#### 三 时间窗口函数 - groupBy(window(col,time))\n",
     "在我们介绍如何使用time window之前，我们先来准备一份时间序列数据。本文将使用Apple公司从1980年到2016年期间的股票交易信息。股票数据一共有六列，但是这里我们仅关心Date和Close两列，它们分别代表股票交易时间和当天收盘的价格。\n",
     "\n"
    ]
@@ -725,6 +728,10 @@
    ],
    "source": [
     "import org.apache.spark.sql.functions._\n",
+    "import org.apache.spark.sql.DataFrame\n",
+    "val myspark = spark\n",
+    "import myspark.implicits._   // 自动将$\"col\"转换为DataFrame的Column\n",
+    "\n",
     "val df = spark.read.\n",
     "                option(\"header\",true).\n",
     "                option(\"inferSchema\",\"true\").\n",
@@ -755,17 +762,6 @@
     "#### 步骤二：计算平均值\n",
     "现在我们需要对每个星期创建一个窗口，这种类型的窗口通常被称为tumbling window，window一般在group by语句中使用。\n",
     "window方法的第一个参数指定了时间所在的列；第二个参数指定了窗口的持续时间(duration)，它的单位可以是seconds、minutes、hours、days或者weeks。创建好窗口之后，我们可以计算平均值。"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import org.apache.spark.sql.DataFrame\n",
-    "val myspark = spark\n",
-    "import myspark.implicits._   // 自动将$\"col\"转换为DataFrame的Column"
    ]
   },
   {
@@ -880,15 +876,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 6. Window api\n",
-    "有如下表, We want to answer two questions:\n",
-    "1. What are the best-selling and the second best-selling products in every category?  \n",
-    "2. What is the difference between the revenue of each product and the revenue of the best-selling product in the same category of that product?\n"
+    "#### 三. Window api\n",
+    "1. . 有如下表, We want to answer two questions:\n",
+    "    1. What are the best-selling and the second best-selling products in every category?  \n",
+    "    2. What is the difference between the revenue of each product and the revenue of the best-selling product in the same category of that product?\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -911,6 +907,26 @@
       "+----------+----------+-------+\n",
       "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "myspark = org.apache.spark.sql.SparkSession@a22f21\n",
+       "df = [product: string, category: string ... 1 more field]\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[product: string, category: string ... 1 more field]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -936,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -959,6 +975,7 @@
    "source": [
     "// dense_rank():window内的rank按照实际大小递增, 相同的值有相同的rank\n",
     "// rank(): window内的rank按照序列顺序递增, 相同的值会有不同的rank\n",
+    "df.createOrReplaceTempView(\"revenue_df\")\n",
     "df.createOrReplaceTempView(\"revenue_df\")\n",
     "spark.sql(\"SELECT * FROM (\n",
     "                SELECT product,\n",
@@ -1004,7 +1021,7 @@
     }
    ],
    "source": [
-    "// DataFrame API\n",
+    "// DataFrame API实现\n",
     "val window_space = Window.partitionBy($\"category\").orderBy($\"revenue\".desc)\n",
     "val dif = max($\"revenue\").over(window_space)-$\"revenue\"\n",
     "df.select($\"product\",$\"category\",$\"revenue\",dif.as(\"dif\")).show"
@@ -1038,7 +1055,7 @@
     }
    ],
    "source": [
-    "// sql\n",
+    "// sql实现\n",
     "spark.sql(\"SELECT * FROM (\n",
     "            SELECT product,\n",
     "                   category,\n",
@@ -1048,11 +1065,71 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "2. 窗口函数使用方法  \n",
+    "窗口函数是高级的groupBy, 支持ranking functions, analytic functions, and aggregate functions\n",
+    "  1. 在支持的窗口方法后加上`OVER`语法:  \n",
+    "    `avg(revenue) OVER (...)`  \n",
+    "    或在支持的方法后面使用DataFrame API  \n",
+    "    `rank() OVER (...)`  \n",
+    "  2. OVER内部指定PARTITION BY和ORDER BY, 可选的指定ROW FRAME  \n",
+    "    1. 指定PARTITION BY和ORDER BY  \n",
+    "       1. sql的写法: `OVER (PARTITION BY ... ORDER BY ...)`  \n",
+    "       2. DataFrame API的写法:   \n",
+    "         `import org.apache.spark.sql.expressions.Window\n",
+    "          Window.partitionBy(...).orderBy(...)`  \n",
+    "    2. ROW FRAME  \n",
+    "     ROW FRAME分为'ROW'和'RANGE'  \n",
+    "       1. `ROWS BETWEEN 1 PRECEDING AND 1 FOLLOWING`: 选中该记录在当前window内前一行和后一行  \n",
+    "       2. `RANGE BETWEEN 2000 PRECEDING AND 1000 FOLLOWING`: 选中该记录在window内数值差距在[x-2000,x+1000]内的记录\n",
+    "     \n",
+    "3. 总结: 窗口函数的使用方法为:    \n",
+    "  1. sql版本: `OVER (PARTITION BY ... ORDER BY ... frame_type BETWEEN m PRECEDING AND n FOLLOWING)`  \n",
+    "  2. DataFrame API版本:  \n",
+    "```scala\n",
+    "windowSpec = Window.partitionBy(...)\n",
+    "                   .orderBy(...)\n",
+    "// Defines a Window Specification with a ROW frame.\n",
+    "windowSpec.rowsBetween(start, end)\n",
+    "// Defines a Window Specification with a RANGE frame.\n",
+    "windowSpec.rangeBetween(start, end)```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+----------+-------+------------------+\n",
+      "|   product|  category|revenue|              mean|\n",
+      "+----------+----------+-------+------------------+\n",
+      "|    Normal|    Tablet|   1500|            2000.0|\n",
+      "|       Big|    Tablet|   2500|2833.3333333333335|\n",
+      "|       Pro|    Tablet|   4500| 4166.666666666667|\n",
+      "|      Mini|    Tablet|   5500|            5500.0|\n",
+      "|      Pro2|    Tablet|   6500|            6000.0|\n",
+      "|  Bendable|Cell Phone|   3000|            3000.0|\n",
+      "|  Foldable|Cell Phone|   3000|3666.6666666666665|\n",
+      "|Ultra Thin|Cell Phone|   5000| 4666.666666666667|\n",
+      "|      Thin|Cell Phone|   6000| 5666.666666666667|\n",
+      "| Very Thin|Cell Phone|   6000|            6000.0|\n",
+      "+----------+----------+-------+------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "spark.sql(\n",
+    "    \"SELECT *,\n",
+    "        mean(revenue) OVER(PARTITION BY category ORDER by revenue ROWS BETWEEN 1 PRECEDING AND 1 FOLLOWING) as mean\n",
+    "     FROM revenue_df\").show"
+   ]
   }
  ],
  "metadata": {
@@ -1062,8 +1139,11 @@
    "name": "apache_toree_scala"
   },
   "language_info": {
+   "codemirror_mode": "text/x-scala",
    "file_extension": ".scala",
+   "mimetype": "text/x-scala",
    "name": "scala",
+   "pygments_lexer": "scala",
    "version": "2.11.8"
   }
  },
