--- a/Spark/Cluster Mode and Job Scheduling.ipynb
+++ b/Spark/Cluster Mode and Job Scheduling.ipynb
@@ -58,6 +58,100 @@
     "     默认地，各个资源池之间平分整个集群的资源（包括default资源池），但在资源池内部，默认情况下，作业是FIFO顺序执行的。举例来说，如果你为每个用户创建了一个资源池，那么久意味着各个用户之间共享整个集群的资源，但每个用户自己提交的作业是按顺序执行的，而不会出现后提交的作业抢占前面作业的资源。\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.3 Spark on Yarn\n",
+    "#### 1. 指定`--master yarn`\n",
+    "#### 2. `--deploy-mode`分为cluster和client。\n",
+    " cluster模式下， Driver程序运行在yarn管理的ApplicationMaster进程内  \n",
+    " client模式下， Driver程序运行在客户端， ApplicationMaster仅用于申请资源\n",
+    "#### 3. 如何查看日志  \n",
+    " 1. yarn开启日志聚合时， 会将运行日志上传到hdfs。通过命令`yarn logs -applicationId <app ID>`查看。 也可以在spark的日志页面查看\n",
+    " 2. 未开启日志聚合， 需要到每台机器上查看container的运行日志\n",
+    " \n",
+    "#### 4. 开启Spark history Server   \n",
+    " webUI的4040端接口在Driver退出后就失效了， 因此需要使用Spark history Server记录历史日志。 默认端口在18080页面\n",
+    " \n",
+    "#### 5. spark job使用log4j\n",
+    "  1. 在`SPARK_HOME/conf`下有日志配置， 来设置所有driver程序一致的日志输出级别  \n",
+    "  2. spark job独立配置的log4j的方法  \n",
+    "   要为应用主程序（即driver端）或执行程序使（即executor端）自定义log4j配置，需要两步就完成了，下面具体说明。  \n",
+    "   第一步：上传自定义 log4j-driver.properties和log4j-executor.properties     \n",
+    "   第二步：添加-Dlog4j的配置。使用 --conf参数。         \n",
+    "   用于驱动程序：`spark.driver.extraJavaOptions = -Dlog4j.configuration = <配置文件的位置>`        \n",
+    "   用于执行者：`spark.executor.extraJavaOptions= -Dlog4j.configuration = <配置文件的位置>`        \n",
+    "   注意：driver端还可以使用spark-submit的`--driver-java-options`参数去配置。    \n",
+    "   方案一：使用  spark-submit的 `--files` 参数将自定义的配置文件上传到应用程序的文件列表中。  \n",
+    "   `spark-submit --class com.hm.spark.Application \n",
+    "         --master yarn \n",
+    "         --deploy-mode cluster \n",
+    "         --driver-cores 1 \n",
+    "         --driver-memory 1G \n",
+    "         --num-executors 2 \n",
+    "         --executor-cores 1 \n",
+    "         --executor-memory 1G \n",
+    "         --driver-java-options \"-Dlog4j.configuration=log4j-driver.properties\" \n",
+    "         --conf spark.executor.extraJavaOptions=\"-Dlog4j.configuration=log4j-executor.properties\" \n",
+    "         --files /home/hadoop、log4j-driver.properties,/home/hadoop、log4j-executor.properties \n",
+    "     /home/hadoop/spark-workspace/my-spark-etl-assembly-1.0-SNAPSHOT.jar`  \n",
+    "   注意，这里我没有使用`spark.driver.extraJavaOptions`参数去配置，而是使用spark-submit的`--driver-java-options`参数进行设置的。     \n",
+    "   方案二：不使用  spark-submit的 --files 参数上传文件，直接使用文件。    \n",
+    "`spark-submit --class com.hm.spark.Application \n",
+    "        --master yarn \n",
+    "        --deploy-mode cluster \n",
+    "        --driver-cores 1 \n",
+    "        --driver-memory 1G \n",
+    "        --num-executors 2 \n",
+    "        --executor-cores 1 \n",
+    "        --executor-memory 1G \n",
+    "        --driver-java-options \"-Dlog4j.configuration=file:/home/hadoop/log4j-driver.propertiess\" \n",
+    "        --conf spark.executor.extraJavaOptions=\"-Dlog4j.configuration=file:/home/hadoop//log4j-exec.properties\" \n",
+    " /home/hadoop/spark-workspace/my-spark-etl-assembly-1.0-SNAPSHOT.jar\n",
+    "`\n",
+    "   注意：如果使用文件，  file: 则应明确提供配置文件的，并且文件需要在所有节点上本地存在。   \n",
+    "   \n",
+    "#### 6. 配置外部Shuffle Service\n",
+    "1. 拷贝`spark-<version>-yarn-shuffle.jar`文件到所有NodeManager的节点上  \n",
+    "2. 增加NodeManager的堆内存  \n",
+    "3. 修改`yarn-site。xml`配置项  \n",
+    "  yarn.nodemanager.aux-services.spark_shuffle.class = org.apache.spark.network.yarn.YarnShuffleService.  \n",
+    "4. spark中配置  \n",
+    "  spark.yarn.shuffle.stopOnFailure = false\t"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.4 Spark On Mesos\n",
+    "#### 1. 提交mesos\n",
+    "```bash\n",
+    "./bin/spark-submit \\\n",
+    "  --class org.apache.spark.examples.SparkPi \\\n",
+    "  --master mesos://207.184.161.138:7077 \\\n",
+    "  --deploy-mode cluster \\\n",
+    "  --supervise \\\n",
+    "  --executor-memory 20G \\\n",
+    "  --total-executor-cores 100 \\\n",
+    "  http://path/to/examples.jar \\\n",
+    "  1000\n",
+    "```\n",
+    "#### 2. mesos的2种模式\n",
+    "1. Coarse-Grained  \n",
+    "优点： spark task启动快。 该模式下每个application占据一定的资源， 直到该应用结束  \n",
+    "2. Fine-Grained  \n",
+    "每个spark-task会在执行过程中动态申请/释放资源， 但spark task启动慢，不适用于低延时场景（现已废弃）"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -67,8 +161,11 @@
    "name": "apache_toree_scala"
   },
   "language_info": {
+   "codemirror_mode": "text/x-scala",
    "file_extension": ".scala",
+   "mimetype": "text/x-scala",
    "name": "scala",
+   "pygments_lexer": "scala",
    "version": "2.11.8"
   }
  },
