--- a/Spark/Spark数据倾斜.ipynb
+++ b/Spark/Spark数据倾斜.ipynb
@@ -107,8 +107,11 @@
    "name": "apache_toree_scala"
   },
   "language_info": {
+   "codemirror_mode": "text/x-scala",
    "file_extension": ".scala",
+   "mimetype": "text/x-scala",
    "name": "scala",
+   "pygments_lexer": "scala",
    "version": "2.11.8"
   }
  },
