--- a/Spark/2-DataFrame,DataSet和Sql.ipynb
+++ b/Spark/2-DataFrame,DataSet和Sql.ipynb
@@ -1088,6 +1088,136 @@
     "        mean(revenue) OVER(PARTITION BY category ORDER by revenue ROWS BETWEEN 1 PRECEDING AND 1 FOLLOWING) as mean\n",
     "     FROM revenue_df\").show"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 四. spark二次排序\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2015,1,24\n",
+      "2015,3,56\n",
+      "2015,1,3\n",
+      "2015,2,-43\n",
+      "2015,4,5\n",
+      "2015,3,46\n",
+      "2014,2,64\n",
+      "2015,1,4\n",
+      "2015,1,21\n",
+      "2015,2,35\n",
+      "2015,2,0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "file = ./data/secondsort.txt MapPartitionsRDD[15] at textFile at <console>:29\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "./data/secondsort.txt MapPartitionsRDD[15] at textFile at <console>:29"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val file = sc.textFile(\"./data/secondsort.txt\")\n",
+    "file.collect.foreach(println)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2015_1,24)\n",
+      "(2015_3,56)\n",
+      "(2015_1,3)\n",
+      "(2015_2,-43)\n",
+      "(2015_4,5)\n",
+      "(2015_3,46)\n",
+      "(2014_2,64)\n",
+      "(2015_1,4)\n",
+      "(2015_1,21)\n",
+      "(2015_2,35)\n",
+      "(2015_2,0)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "data = MapPartitionsRDD[17] at map at <console>:30\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "MapPartitionsRDD[17] at map at <console>:30"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val data = file.map(_.split(\",\")).map(l=>(s\"${l(0)}_${l(1)}\",l(2)))\n",
+    "data.collect.foreach(println)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2014,2,64)\n",
+      "(2015,1,24)\n",
+      "(2015,1,3)\n",
+      "(2015,1,4)\n",
+      "(2015,1,21)\n",
+      "(2015,2,-43)\n",
+      "(2015,2,35)\n",
+      "(2015,2,0)\n",
+      "(2015,3,56)\n",
+      "(2015,3,46)\n",
+      "(2015,4,5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.sortByKey(true).map(x=>(x._1.split(\"_\")(0),\n",
+    "                            x._1.split(\"_\")(1),\n",
+    "                            x._2)).collect.foreach(println)"
+   ]
   }
  ],
  "metadata": {
