--- a/Spark/Cluster Mode and Job Scheduling.ipynb
+++ b/Spark/Cluster Mode and Job Scheduling.ipynb
@@ -9,7 +9,7 @@
     "<img src=\"img/cluster-overview.png\">\n",
     "1. 每个spark application都有自己独立的executor来运行任务. 使得application之间彼此独立, 数据也不共享(除非写到外部存储系统上)  \n",
     "2. Driver program需要从cluster manager上获取为它分配的excecuter的地址, 并在任务运行期间, 一直与其自身的executor保持连接  \n",
-    "3. spark不知道潜在的cluster manager实例是什么, 只要获取executor进行的链接即可. 因此, cluster manager可以很烦变的在mesos,yarn,standalone之间选择\n",
+    "3. spark不知道潜在的cluster manager实例是什么, 只要获取executor进行的链接即可. 因此, cluster manager可以很方便的在mesos,yarn,standalone之间选择\n",
     "\n",
     "#### 二. Submitting Applications\n",
     "[Submitting Applications](https://spark.apache.org/docs/latest/submitting-applications.html)\n",
