--- a/Spark/2-DataFrame,DataSet和Sql.ipynb
+++ b/Spark/2-DataFrame,DataSet和Sql.ipynb
@@ -1218,6 +1218,38 @@
     "                            x._1.split(\"_\")(1),\n",
     "                            x._2)).collect.foreach(println)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val df1 = Seq((\"a\",1,1),(\"b\",1,1)).toDF(\"name\",\"val1\",\"val2\")\n",
+    "val publicField = Set(\"name\")\n",
+    "val colNames = df1.columns\n",
+    "\n",
+    "val features = (Set(colNames:_*)--publicField).toArray\n",
+    "\n",
+    "val renameColNames = colNames.map(x => df1.col(x).as(s\"renamed_$x\")) \n",
+    "val df2 = df1.select(renameColNames:_*)\n",
+    "\n",
+    "// 关联形成大表\n",
+    "val df3 = df1.join(df2,df1(\"name\").equalTo(df2(\"renamed_name\")))\n",
+    "\n",
+    "val conditions = colNames.map(x=>{\n",
+    "\t\twhen(df3(x) === df3(s\"renamed_$x\"),1)\n",
+    "               .when(df3(x) >= df3(s\"renamed_$x\"), 2)\n",
+    "               .otherwise(3)\n",
+    "})\n",
+    "\n",
+    "val allColumn = publicField.toArray.map(x=>col(x))++conditions\n",
+    "val df4 = df3.select(allColumn:_*)\n",
+    "\n",
+    "val resColName = Array.tabulate(colNames.length)({idx=>df4.col(df4.columns(idx)).as(colNames(idx))})\n",
+    "val allresColName = publicField.toArray.map(x=>col(x))++resColName\n",
+    "val resDF = df4.select(resColName:_*)"
+   ]
   }
  ],
  "metadata": {
