--- a/Java Parallel program/2-parallel control method.ipynb
+++ b/Java Parallel program/2-parallel control method.ipynb
@@ -39,7 +39,7 @@
     "    }\n",
     "   ```\n",
     " 3. 关键字在静态方法上   \n",
-    "  关键字在静态方法上, 相当于锁加到当前Class上, 所有对该方法的调用, 都要现货的该Class的锁\n",
+    "  关键字在静态方法上, 相当于锁加到当前Class上, 所有对该方法的调用, 都要先获得该Class的锁\n",
     "  ```java\n",
     "    public synchronized static void method(Object obj){}\n",
     "  ```\n",
@@ -609,17 +609,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Java",
-   "language": "java",
-   "name": "java"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": "java",
-   "file_extension": ".java",
-   "mimetype": "text/x-java-source",
-   "name": "Java",
-   "pygments_lexer": "java",
-   "version": "10.0.2+13"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
