variance in java and scala

--- a/Scala/6-泛型.ipynb
+++ b/Scala/6-泛型.ipynb
@@ -412,7 +412,7 @@
     "#### 9. 泛型测试\n",
     "1. 符号`<:<`,`>:>`,`<%<`  \n",
     "2. 使用场景:  \n",
-    "  有时类上的泛型是宽泛的, 但累的方法又要求该泛型的上界/下界/隐式转换满足某些条件才能执行, 这是就可以在方法上定义泛型测试"
+    "  有时类上的泛型是宽泛的, 但类中的某些方法又要求该泛型满足某些条件才能执行, 这是就可以在方法上定义泛型测试"
    ]
   },
   {
@@ -559,18 +559,17 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Scala",
+   "display_name": "Apache Toree - Scala",
    "language": "scala",
-   "name": "scala"
+   "name": "apache_toree_scala"
   },
   "language_info": {
    "codemirror_mode": "text/x-scala",
    "file_extension": ".scala",
    "mimetype": "text/x-scala",
-   "name": "scala211",
-   "nbconvert_exporter": "script",
+   "name": "scala",
    "pygments_lexer": "scala",
-   "version": "2.11.11"
+   "version": "2.11.12"
   }
  },
  "nbformat": 4,
