thinking in java thread

--- a/Java NetWork/2.7 Non-blocking Sever.ipynb
+++ b/Java NetWork/2.7 Non-blocking Sever.ipynb
@@ -40,6 +40,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 四. RingBuffer\n",
+    "#### 1. wrapping around  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;Ring Buffer可以被用作queue,本质上是一个固定长度的数组. 包含一个read position和一个write position, 分别表示下次从该位置读数据和下次再该位置写数据. 当write position到达数组的末尾时,置回为0, read position也一样, 这种position到达数组末尾就置回0的操作称作\"wrapping around\", 该操作把一个array变成RingBuffer\n",
+    "\n",
+    "#### 2. free space和used space  \n",
+    "1. 当write position没有发生\"wrapping around\"时    \n",
+    "     used space=\"write position\"和\"read position\"之间的区域    \n",
+    "     剩下的为used space\n",
+    "\n",
+    "2. 当write position发生\"wrapping around\"时   \n",
+    "     free space=\"write position\"和\"read position\"之间的区域  \n",
+    "     剩下的微free space\n",
+    "<img src=\"img/ringbuffer11.png\" width=\"50%\" height=\"50%\">\n",
+    "\n",
+    "#### 3. RingBuffer实现  \n",
+    "ringbuffer有很多实现方式, 其中最简单的两种: \n",
+    "- Using a fill count\n",
+    "- Using a flip marker\n",
+    "\n",
+    "#### 4. fill count\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;fill count方式使用3个标记: capacity, write position和fill count; fillcount表示ring buffer中存在多少可用元素.  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;插入数据时, 先查看fill count是否已满, 如果未满则插入, 并把write position向后移动  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;读取数据时, 先查看fill count是否为0, 如果不为0, 则从`write position减fill count`的位置开始读取数据  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;如下使用available变量表示fill count\n",
+    "\n",
+    "#### 5. Flip Marker"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
