--- a/GC/1-Introduction.ipynb
+++ b/GC/1-Introduction.ipynb
@@ -132,17 +132,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Java",
-   "language": "java",
-   "name": "java"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": "java",
-   "file_extension": ".java",
-   "mimetype": "text/x-java-source",
-   "name": "Java",
-   "pygments_lexer": "java",
-   "version": "10.0.2+13"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
