--- a/GC/oracle - Java Garbage Collection.ipynb
+++ b/GC/oracle - Java Garbage Collection.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "#### 一. Hotspot架构\n",
     "* JIT在java程序运行中, 针对底层操作系统, 生成高表现力的本地机器代码\n",
-    "* JVM在随着不断演进, 持续迭代java运行时, 而且有多线程的垃圾收集器  \n",
+    "* JVM在随着不断演进, 持续迭代java runtime, 而且有多线程的垃圾收集器  \n",
     "* JVM的主要组建包括:  \n",
     "    * classloader\n",
     "    * 运行时数据区\n",
@@ -24,7 +24,7 @@
     "    * JIT编辑器\n",
     "    * 垃圾回收器     \n",
     "  关键组件在下图用紫色标出, 调试java程序性能时, 通常使用'堆大小'和'选择哪个垃圾回收器'为主.   \n",
-    "  虽然JIT也关系着程序性能, 单着只能在下个版本的jvm中给出优化\n",
+    "  虽然JIT也关系着程序性能, 但只能在下个版本的jvm中给出优化\n",
     "  \n",
     "  \n",
     " <img src=\"img/jvm2.png\" width=\"60%\" height=\"60%\" align=\"left\"/>  \n",
@@ -62,33 +62,117 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 三. 垃圾回收的步骤  \n"
+    "#### 三. 垃圾回收的步骤  \n",
+    "* Step 1: 标记\n",
+    "    * gc收集器在此步区分开正在使用, 和未被使用的内存片\n",
+    "    * 为了区分哪些对象在使用, 儿那些没有在使用, 所有对象都要被被scan(扫描)一次. 这种操作很消耗时间\n",
+    "        * 如下图, 正在被引用的对象用蓝色标出, 没有引用的对象用金色标出  \n",
+    "<img src='img/marking1.png' height='60%' width='60%' align='left'>    "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "source": [
+    "* Step 2: Normal Deletion\n",
+    "    * 该步骤将删除未被引用的对象(金色的), 使得memory allocator(内存分配器)持有指向标free space的指针,   \n",
+    "      下次分配对象时用这些free space空间来产生对象  \n",
+    "      \n",
+    " <img src='img/deletion.png' width='60%' height='60%' align='left'> "
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* Step 2a: Deletion with Compacting\n",
+    "    * 为了提高表现, 也可以在deletion后, compact(压缩)剩余的内存空间. 通过将存在引用的对象聚合在一起, 这将使得新内存的分配更容易更快速  \n",
+    "    \n",
+    " <img src='img/deletion2a.png' width='60%' height='60%' align='left'>     "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 四. 为什么分代收集\n",
+    "1. 早期jvm的做法\n",
+    "    * 早期的jvm, gc收集器必须标记并压缩内存中的所有对象. 这种操作并不高效, 原因是随着越来越多的对象被生成, gc的时间也越来越长\n",
+    "    * 经过经验性的总结, 发现对象多是短生命周期的, 时间越久, 对象的存活率就越低\n",
+    "    * 如下图, x轴表示随时间增长, 共分配了多少内存; y轴表示随时间增长, 存活的对象有多大  \n",
+    "    \n",
+    "<img src='img/earlyjvm.png' width='50%' height='50%' align='left'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. JVM的代\n",
+    "    * 如上经验性分析可用于提高gc的表现力. 对象根据存活能力被分成青年带,老年代,永久带\n",
+    "    * 青年代:\n",
+    "        * 新对象再次产生, 青年代的gc称为'minor gc' 青年带上的对象有很高的死亡率. 所有在minor gc后幸存的对象都会增长一个age, 直到最终进入老年代.   \n",
+    "        * 充满死亡对象的青年代, 在进行gc时通常会很快\n",
+    "        * 所有的'minor gc'都是'stop the world'事件\n",
+    "    * 老年代  \n",
+    "        * 老年代存储长期存活的对象. 一般来讲, 会给青年代中的对象设置一个阈值, 当对象的age到达阈值时, 该对象就会从青年代移动到老年代  \n",
+    "        * 最终, 老年代的对象也会被gc掉. 考年代的gc称作'major gc'\n",
+    "        * 老年代的gc通常很慢, 因为这会涉及到所有其关联的存活对象, 所以对于'高响应' (responsiveness)的应用, 应该保证老年代的垃圾集合最小化  \n",
+    "        * 老年代gc的速度, 和选择的老年代gc收集器有很大关系\n",
+    "    * 永久代  \n",
+    "        * 永久代包含JVM描述类和方法的meta信息\n",
+    "        * java se的类和方法存在这个代中\n",
+    "        * 当JVM不在使用某个类时, 就会引发gc, 永久代的gc会触发'full gc' - 所有代进行gc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 五. gc的一般流程\n",
+    "现在, 已经讲明jvm为什么要分代(避免scan整个内存), 是时候讲这些空间之间如何交互了.下图这展示了object allocation和ageing process的过程\n",
+    "1. 新对象被分配在eden区, 2个survivor区在jvm启动时是空的  \n",
+    "2. 当eden区空间满时, 触发minor gc: \n",
+    "    * 存在引用的对象移动到第一个survivor空间(s0,其age从0变成1), 不存在引用的对象被从eden区删除 (因此minor gc后,eden区为空)\n",
+    "    * 如下图, 存在引用的对象蓝色标记, 不存在引用的对象黄色标记, 对象上的数字表示age  \n",
+    "    \n",
+    "<img src='img/pro1.png' width='60%' height='60%' align='left'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. 下次minor gc, 同样的事情发生在eden区, 未引用的对象从eden区中删除, 但是存在引用的对象会被移动到第二个survivor空间(s1,其age从0变为1); 此外, 上次minor gc移动到s0的对象, 将被移动到s1, 且其age增加1. 一旦所有对象都移动到s1, s0和eden区都会变成空的, 但是请注意, survivor区的对象的age不一样    \n",
+    "\n",
+    "<img src='img/pro2.png' width='60%' height='60%' align='left'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. 再下次minor gc, 同样的处理流程触发, 但survivor空间切换, 存在引用的对象会被移动到s0, s1和eden区会被清空\n",
+    "5. 如下图所示, 每次monor gc,当存活对象的age到达一个阈值后(图中的阈值为8), 幸存对象将从青年代被提升到老年代(被称为promotion)  \n",
+    "\n",
+    "<img src='img/pro3.png' width='60%' height='60%' align='left'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "6. 随着minor gc的不断发生, 越来越多的对象被提升(promotion)到老年代  \n",
+    "7. 随着青年代不断的至=执行上述整个流程, 最终触发老年代的major gc. 老年代中, 未被引用的对象将被清除, 存在引用的对象将被压缩到老年代的一端(clean up and compact)  \n",
+    "\n",
+    "<img src='img/pro4.png' width='60%' height='60%' align='left'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 六.  高性能gc器 - 替换默认的serial gc器\n",
     "* Parallel GC\n",
     "    * Parallel GC是多线程的年轻带收集器. 一个n核心的主机上默认使用n个线程进行gc  \n",
     "      gc线程数控制: `-XX:ParallelGCThreads=<desired number>`\n",
@@ -127,7 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 四. 默认收集器  \n",
+    "#### 七. 默认收集器  \n",
     "* `java -XX:+PrintCommandLineFlags -version ` : 查看当前gc是哪种\n",
     "* Default garbage collectors:\n",
     "    * Java 7 - Parallel GC\n",
