--- a/GC/oracle - Java Garbage Collection.ipynb
+++ b/GC/oracle - Java Garbage Collection.ipynb
@@ -131,8 +131,8 @@
    "source": [
     "#### 五. gc的一般流程\n",
     "现在, 已经讲明jvm为什么要分代(避免scan整个内存), 是时候讲这些空间之间如何交互了.下图这展示了object allocation和ageing process的过程\n",
-    "1. 新对象被分配在eden区, 2个survivor区在jvm启动时是空的  \n",
-    "2. 当eden区空间满时, 触发minor gc: \n",
+    "* 1.新对象被分配在eden区, 2个survivor区在jvm启动时是空的  \n",
+    "* 2.当eden区空间满时, 触发minor gc: \n",
     "    * 存在引用的对象移动到第一个survivor空间(s0,其age从0变成1), 不存在引用的对象被从eden区删除 (因此minor gc后,eden区为空)\n",
     "    * 如下图, 存在引用的对象蓝色标记, 不存在引用的对象黄色标记, 对象上的数字表示age  \n",
     "    \n",
